[package]
name = "rust-license-key"
version = "0.1.0"
edition = "2021"
authors = ["Simon Stephan"]
description = "A production-grade Rust library for creating and validating offline software licenses using Ed25519 cryptography"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Simon-Stephan/rust-license-key"
documentation = "https://docs.rs/rust-license-key"
readme = "README.md"
keywords = ["license", "cryptography", "ed25519", "validation", "signing"]
categories = ["authentication", "cryptography"]
rust-version = "1.70"

[dependencies]
# Cryptography - Ed25519 digital signatures
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for license transport
base64 = "0.22"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Semantic versioning for version constraints
semver = { version = "1.0", features = ["serde"] }

[dev-dependencies]
# For deterministic testing
once_cell = "1.19"

[features]
default = []

[lib]
name = "rust_license_key"
path = "src/lib.rs"
